[package]
name = "prusti-polyfill"
version = "0.1.0"
authors = ["Parker Lawrence <liverspleenkidney@gmail.com>"]
edition = "2018"
path = "src/lib.rs"
crate-type = ["proc-macro"]


[dependencies]



[lib]
proc-macro = true


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html



